--- a/build.gradle
+++ b/build.gradle
@@ -32,11 +32,19 @@ subprojects {
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
 
+        implementation 'com.fasterxml.jackson.core:jackson-annotations'
+        
+
         // Spring Boot Starter dependencies
         implementation 'org.springframework.boot:spring-boot-starter-validation'
 
         // Testing dependencies
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+        runtimeOnly 'org.postgresql:postgresql'
     }
 
     tasks.named('test') {
