--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,5 @@ rootProject.name = "lebane-challenge"
 
 include 'lebane-repository'
 include 'lebane-domain'
+include 'lebane-api'
+include 'lebane-service'
