--- a/lebane-repository/src/main/resources/application.properties
+++ b/lebane-repository/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/lebane_db}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:user_lebane}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password_lebane}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
